hphp/hack/test/typecheck/attributes/attribute_reference_self.php.rust_elab.exp
File "attribute_reference_self.php", line 7, characters 17-20:
Internal error: Unexpected CIself (Other[0000])
